--- a/link1.html
+++ b/link1.html
@@ -20,7 +20,12 @@
   </header>
     <div id="body">
       YO YO YO WHUDDUP!!!
-      <script>alert("page script!")</script>
+      <script>
+        alert("page script!")
+        function alertAgain() {
+          alert("page script again!")
+        }
+      </script>
     </div>
   </body>
 </html>
